# Ethernet-physical-layer-simulator

./: .gitignore  README.md  hatch_build.py  installer.py  pyproject.toml
docs/: 40GBASE-T.tex  Abstract_ENG.tex  Instalacja.tex  Intro.tex  Kod.tex  Laboratorium-RS.tex  Laboratorium-sprawozdanie.tex  Laboratorium.tex  Modulacja.tex  Podsumowanie.tex  Praca.tex  Prezentacja.tex  ReedSolomon.tex  Rozwiazania.tex  Streszczenie_PL.tex  Symulator.tex  Title.tex  Tlumienie.tex  Wejsciowka.tex  Zadania.tex  references.bib
examples/: dsq128_pam16_modulation.py  reed_solomon.py  simulation.py
src/: simulation.py
src/phyether/: __init__.py  dac.py  ethernet_cable.py  gui.py  main.py  pam.py  phyether.py  reed_solomon.py  reed_solomon_bch.py  twisted_pair.py  util.py
src/phyether/gui/: gui.py  pam_simulation.py  rs_register_tab.py  rs_tab.py  simulation.py  util.py  validators.py
stubs/PySpice/: __init__.pyi
stubs/PySpice/Config/: ConfigInstall.pyi
stubs/PySpice/DeviceLibrary/: __init__.pyi
stubs/PySpice/Doc/: ExampleTools.pyi
stubs/PySpice/Logging/: Logging.pyi
stubs/PySpice/Math/: Calculus.pyi  __init__.pyi
stubs/PySpice/Physics/: MaterialProperties.pyi  PhysicalConstants.pyi  Resistor.pyi  SemiConductor.pyi
stubs/PySpice/Plot/: BodeDiagram.pyi
stubs/PySpice/Probe/: Plot.pyi  WaveForm.pyi
stubs/PySpice/Scripts/: cir2py.pyi  pyspice_post_installation.pyi
stubs/PySpice/Spice/: BasicElement.pyi  ElementParameter.pyi  HighLevelElement.pyi  Library.pyi  Netlist.pyi  Parser.pyi  Parser_jmgc.pyi  RawFile.pyi  Simulation.pyi  __init__.pyi
stubs/PySpice/Tools/: EnumFactory.pyi  File.pyi  (+2 more)
(+18 files in other folders)
